chore(pom): 版本号升级为 1.0.0
- 将 parent 版本从1.0.30-SNAPSHOT 修改为 1.0.0
- 相应地更新 revision 属性值